--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,6 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
 }
@@ -15,4 +14,12 @@
 
 .App-intro {
   font-size: large;
+}
+
+.single-form-row {
+  padding-bottom: 20px;
+}
+
+.mg-bottom {
+  margin-bottom: 20px;
 }
