Private route for logged in user

--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,8 @@ nav {
 .login-form > * {
   margin-bottom: 15px;
 }
+
+.login-form input[type="submit"] {
+  width: 120px;
+  align-self: center;
+}
