--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,19 @@ nav {
 a.color-btn {
   color: white !important;
 }
+
+.visible {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+.teacher-link {
+  color: #007bff!important;
+}
+
+.teacher-link:hover {
+  text-decoration: underline!important;
+}
