--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,10 @@ a.color-btn {
 .teacher-link:hover {
   text-decoration: underline!important;
 }
+
+.centered-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 400px;
+  justify-content: center;
+}
