--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,22 @@
 }
 
 .App-header {
+  height: 180px;
   background: url("./images/header.jpg");
   color: white;
 }
 
 .header-bg {
+  height: 180px;
   background-color: #0056b3;
   opacity: 0.75;
-  padding: 50px;
+  padding: 40px;
   text-align: left;
 }
 
 .logo {
   width: 100px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .App-title {
@@ -140,10 +142,11 @@ a.color-btn {
 }
 
 .routes {
-  height: 100%;
+  min-height: calc(100vh - 244px);
 }
 
 .footer {
+  height: 64px;
   padding: 20px;
   margin-top: 20px;
   color: white;
@@ -153,3 +156,30 @@ a.color-btn {
 textarea.form-control {
   resize: none;
 }
+
+@media screen and (max-width: 900px) {
+  .narcissus_17w311v {
+    left: 30% !important;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .header-bg {
+    text-align: center;
+  }
+  .App-title {
+    font-size: 2em;
+  }
+
+  .narcissus_17w311v {
+    left: 18% !important;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .narcissus_17w311v {
+    padding: 10px !important;
+    left: 15% !important;
+  }
+}
+
