--- a/src/App.css
+++ b/src/App.css
@@ -73,10 +73,13 @@ nav .active {
 .image {
   width: 50%;
   margin-right: 20px;
+  height: 150px;
 }
 
 .image img {
   max-width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .info-data {
@@ -237,5 +240,11 @@ textarea.form-control {
   }
   .App-title {
     width: 100%;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .image {
+    height: 200px;
   }
 }
