Small visual fix: border on textareas

--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,7 @@ textarea.form-control {
 
 textarea.feedback {
   width: 100%;
+  border: 1px solid rgba(0,0,0,0.3);
   border-radius: 4px;
   resize: none;
   background-color: transparent;
